# Low-Latency-Order-Matching-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ISSUES_BACKLOG.md  ROADMAP.md
examples/: ws_client.html
include/lom/: lockfree_mpsc_queue.hpp  matching_engine.hpp  order_book.hpp  order_pool.hpp  types.hpp  websocket_server.hpp
src/: benchmark.cpp  main.cpp
src/core/: order_book.cpp
src/engine/: matching_engine.cpp
src/net/: socket_compat.hpp  websocket_server.cpp
src/util/: base64.cpp  base64.hpp  sha1.cpp  sha1.hpp
tests/: order_book_tests.cpp
